// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Paginations /> snapshots do not render go To when isShowGoTo is false 1`] = `
<div
  className="paginations-wrapper"
>
  <div
    className="show-results-container"
  >
    <div
      className="show-row-container"
    >
      <p>
        <span>
          SHOW_ROWS
        </span>
      </p>
      <div
        className="dropup dropdown"
        onKeyDown={[Function]}
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          aria-label={null}
          className="dropdown-toggle btn btn-secondary"
          onClick={[Function]}
          type="button"
        >
          15
        </button>
        <div
          aria-hidden={true}
          className="dropdown-menu"
          role="menu"
          tabIndex="-1"
        >
          <button
            className="dropdown-item"
            onClick={[Function]}
            role="menuitem"
            tabIndex="0"
            type="button"
          >
            15
          </button>
          <button
            className="dropdown-item"
            onClick={[Function]}
            role="menuitem"
            tabIndex="0"
            type="button"
          >
            18
          </button>
          <button
            className="dropdown-item"
            onClick={[Function]}
            role="menuitem"
            tabIndex="0"
            type="button"
          >
            21
          </button>
        </div>
      </div>
    </div>
    <div
      className="show-results"
    >
      SHOW_RESULTS
    </div>
  </div>
  <div
    className="paginations-container"
  >
    <nav
      aria-label="Page navigation example"
      className=""
    >
      <ul
        className="pagination pagination-5"
      >
        <li
          className="first-pagination page-item disabled"
        >
          <a
            aria-label="First"
            className="page-link"
            href="#"
            onClick={[Function]}
          >
            <span
              aria-hidden="true"
            >
              <i
                className="fa fa-fw fa-angle-double-left"
              />
            </span>
            <span
              className="sr-only"
            >
              First
            </span>
          </a>
        </li>
        <li
          className="prev-pagination page-item disabled"
        >
          <a
            aria-label="Previous"
            className="page-link"
            href="#"
            onClick={[Function]}
          >
            <span
              aria-hidden="true"
            >
              <i
                className="fa fa-fw fa-angle-left"
              />
            </span>
            <span
              className="sr-only"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          className="page-item active"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
          >
            1
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
          >
            2
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
          >
            3
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
          >
            4
          </a>
        </li>
        <li
          className="page-item"
        >
          <a
            className="page-link"
            href="#"
            onClick={[Function]}
          >
            5
          </a>
        </li>
        <li
          className="next-pagination page-item"
        >
          <a
            aria-label="Next"
            className="page-link"
            href="#"
            onClick={[Function]}
          >
            <span
              aria-hidden="true"
            >
              <i
                className="fa fa-fw fa-angle-right"
              />
            </span>
            <span
              className="sr-only"
            >
              Next
            </span>
          </a>
        </li>
        <li
          className="last-pagination page-item"
        >
          <a
            aria-label="Last"
            className="page-link"
            href="#"
            onClick={[Function]}
          >
            <span
              aria-hidden="true"
            >
              <i
                className="fa fa-fw fa-angle-double-right"
              />
            </span>
            <span
              className="sr-only"
            >
              Last
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;

exports[`<Paginations /> snapshots render snapshot correctly 1`] = `
<div
  className="paginations-wrapper"
>
  <div
    className="show-results-container"
  >
    <div
      className="show-row-container"
    >
      <p>
        <span>
          SHOW_ROWS
        </span>
      </p>
      <div
        className="dropup dropdown"
        onKeyDown={[Function]}
      >
        <button
          aria-expanded={false}
          aria-haspopup={true}
          aria-label={null}
          className="dropdown-toggle btn btn-secondary"
          onClick={[Function]}
          type="button"
        >
          15
        </button>
        <div
          aria-hidden={true}
          className="dropdown-menu"
          role="menu"
          tabIndex="-1"
        >
          <button
            className="dropdown-item"
            onClick={[Function]}
            role="menuitem"
            tabIndex="0"
            type="button"
          >
            15
          </button>
          <button
            className="dropdown-item"
            onClick={[Function]}
            role="menuitem"
            tabIndex="0"
            type="button"
          >
            18
          </button>
          <button
            className="dropdown-item"
            onClick={[Function]}
            role="menuitem"
            tabIndex="0"
            type="button"
          >
            21
          </button>
        </div>
      </div>
    </div>
    <div
      className="show-results"
    >
      SHOW_RESULTS
    </div>
  </div>
  <div
    className="paginations-container"
  >
    <div
      className="go-to-container"
    >
      <p>
        <span>
          GO_TO
        </span>
      </p>
      <input
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        type="number"
        value={1}
      />
    </div>
    <nav
      aria-label="Page navigation example"
      className=""
    >
      <ul
        className="pagination pagination-5"
      >
        <li
          className="first-pagination page-item disabled"
        >
          <a
            aria-label="First"
            className="page-link"
            href="#"
            onClick={[Function]}
          >
            <span
              aria-hidden="true"
            >
              <i
                className="fa fa-fw fa-angle-double-left"
              />
            </span>
            <span
              className="sr-only"
            >
              First
            </span>
          </a>
        </li>
        <li
          className="prev-pagination page-item disabled"
        >
          <a
            aria-label="Previous"
            className="page-link"
            href="#"
            onClick={[Function]}
          >
            <span
              aria-hidden="true"
            >
              <i
                className="fa fa-fw fa-angle-left"
              />
            </span>
            <span
              className="sr-only"
            >
              Previous
            </span>
          </a>
        </li>
        <li
          className="next-pagination page-item disabled"
        >
          <a
            aria-label="Next"
            className="page-link"
            href="#"
            onClick={[Function]}
          >
            <span
              aria-hidden="true"
            >
              <i
                className="fa fa-fw fa-angle-right"
              />
            </span>
            <span
              className="sr-only"
            >
              Next
            </span>
          </a>
        </li>
        <li
          className="last-pagination page-item disabled"
        >
          <a
            aria-label="Last"
            className="page-link"
            href="#"
            onClick={[Function]}
          >
            <span
              aria-hidden="true"
            >
              <i
                className="fa fa-fw fa-angle-double-right"
              />
            </span>
            <span
              className="sr-only"
            >
              Last
            </span>
          </a>
        </li>
      </ul>
    </nav>
  </div>
</div>
`;
